grammar.js
    document: ($) =>
      choice(
        seq($.document_title, repeat1($._block)),
        repeat1($._block),
      ),

    // ===== Document Title =====
    // A single line followed by blank line(s), only at document start.
    // Dynamic precedence makes this win over the repeat1(_block) alternative.
    // Optionally includes a subtitle: title line ending with colon + second line.
    // Subtitle node used inside document_title. The lex-core parser
    // further constrains subtitles to only appear when the title line
    // ends with a colon. Tree-sitter emits the CST node and the LSP
    // layer validates semantics.
    _block: ($) =>
      choice(
        $.verbatim_block,
        $.annotation_block,
        $.annotation_single,
        $.definition,
        $.session,
        $.list,
        $.table_row,
        $.table_separator_row,
        $.paragraph,
        $.blank_line,
      ),

    // ===== Sessions =====
    // _session_break replaces the old "blank+ indent" sequence. The scanner
    // emits it after confirming blank line(s) followed by increased indent
    // via lookahead. This eliminates the GLR fork between session and
    // paragraph, fixing nested session nesting.
    session: ($) =>
      prec.dynamic(
        5,
        seq(
          field("title", alias($._session_title, $.line_content)),
          $._newline,
          $._session_break,
          repeat1($._block),
          $._dedent,
        ),
      ),

    // Session titles can include list markers (e.g., "1. Introduction")
    // and subject lines (e.g., "Chapter Title:"). Both scanner-differentiated
    // variants are accepted and aliased to preserve tree structure.
    _session_title: ($) =>
      choice(
        seq(
          choice(
            alias($._list_start, $.list_marker),
            alias($._session_marker, $.list_marker),
            $.list_marker,
          ),
          optional($.text_content),
        ),
        choice(
          alias($._definition_subject, $.subject_content),
          $.subject_content,
        ),
        $.text_content,
      ),

    // ===== Verbatim Blocks =====
    // Verbatim blocks can contain multiple subject/content pairs (groups)
    // sharing a single closing annotation. The first subject/content lives
    // directly in verbatim_block; additional pairs are verbatim_group_item nodes.
    // Two-prec verbatim: _definition_subject at prec 6 (scanner confirms
    // indent/:: follows, no false positives), plain subject_content at prec 1
    // (for blank+indent case only). The low prec prevents subject_content from
    // winning GLR over paragraph/session when there's no closing annotation.
    verbatim_block: ($) =>
      choice(
        prec.dynamic(
          6,
          seq(
            field(
              "subject",
              alias($._definition_subject, $.subject_content),
            ),
            $._newline,
            choice(
              seq($._session_break, repeat1($._block), $._dedent),
              seq(
                repeat($.blank_line),
                optional(seq($._indent, repeat1($._block), $._dedent)),
              ),
              seq(repeat($.blank_line), $.verbatim_content),
            ),
            repeat($.verbatim_group_item),
            $.annotation_marker,
            $.annotation_header,
            $.annotation_close,
            $._newline,
          ),
        ),
        prec.dynamic(
          6,
          seq(
            field(
              "subject",
              $.subject_content,
            ),
            $._newline,
            choice(
              seq($._session_break, repeat1($._block), $._dedent),
              seq(
                repeat1($.blank_line),
                optional(seq($._indent, repeat1($._block), $._dedent)),
              ),
              seq(
                choice(repeat1($.blank_line), seq($._session_break, $._dedent)),
                $.verbatim_content
              ),
            ),
            repeat($.verbatim_group_item),
            $.annotation_marker,
            $.annotation_header,
            $.annotation_close,
            $._newline,
          ),
        ),
      ),

    // Additional subject/content pair in a verbatim group.
    verbatim_group_item: ($) =>
      prec.dynamic(
        4,
        prec.right(
          seq(
            repeat($.blank_line),
            field(
              "subject",
              choice(
                alias($._definition_subject, $.subject_content),
                $.subject_content,
              ),
            ),
            $._newline,
            choice(
              seq($._session_break, repeat1($._block), $._dedent),
              seq(
                repeat($.blank_line),
                optional(seq($._indent, repeat1($._block), $._dedent)),
              ),
              seq(repeat($.blank_line), $.verbatim_content),
            ),
          ),
        ),
      ),

    // ===== Definitions =====
    // Uses _definition_subject from scanner (subject + indent lookahead)
    // so paragraphs can't absorb definition subjects.
    definition: ($) =>
      prec.dynamic(
        2,
        seq(
          field("subject", alias($._definition_subject, $.subject_content)),
          $._newline,
          $._indent,
          repeat1($._block),
          $._dedent,
        ),
      ),

    // ===== Lists =====
    // Lists start with _list_start_item (scanner confirms 2+ items via lookahead)
    // then continue with list_items (using regular list_marker). This split is
    // critical: only _list_start can begin a list at the _block level, preventing
    // the list_item fork from making INDENT valid in paragraph contexts.
    table_row: ($) =>
      prec(
        5,
        seq(
          alias($._pipe_row_start, $.pipe_delimiter),
          repeat1(seq(optional($.table_cell), $.pipe_delimiter)),
          $._newline,
        ),
      ),

    // Table separator row (cosmetic: |---|---|). The scanner emits the
    // entire line content as _table_separator.
    table_separator_row: ($) =>
      prec(6, seq($._table_separator, $._newline)),

    // Cell content between pipe delimiters. Wraps text_content (named node)
    // so that inline elements are visible in the CST. The scanner intercepts
    // | as pipe_delimiter, so cell content naturally stops at pipe boundaries.
    table_cell: ($) => $.text_content,

    // ===== Annotations =====
    annotation_single: ($) =>
      seq(
        $.annotation_marker,
        $.annotation_header,
        $.annotation_close,
        optional(alias($.text_content, $.annotation_inline_text)),
        $._newline,
      ),

    // Annotation header: everything between the :: markers.
    // Allows single colons inside (e.g., :: author: Name ::) but stops
    // before :: (double colon) which the scanner handles as annotation_close.
    annotation_header: (_$) => /([^:\n]|:[^:\n])+/,

    // ===== Paragraphs =====
    // Paragraphs consume text_line and dialog_line. They only match
    // list_marker (not _list_start) and subject_content (not _definition_subject),
    // so the paragraph deterministically ends before confirmed list/definition
    // boundaries.
    paragraph: ($) =>
      prec.right(-1, repeat1(choice($.text_line, $.dialog_line))),

    text_line: ($) => seq($.line_content, $._newline),

    // Dialog line: list-marker line in paragraph context (single item = dialog).
    // Uses list_marker only — _list_start forces paragraph to end.
    dialog_line: ($) => seq($.list_marker, optional($.text_content), $._newline),

    // Line content: subject or text (no list markers — those go through
    // dialog_line in paragraphs or _session_title in sessions).
    // Uses subject_content only — _definition_subject forces paragraph to end.
    line_content: ($) => choice($.subject_content, $.text_content),

    // ===== Inline-Aware Text Content =====
    text_content: ($) => repeat1($._inline),

    _inline: ($) =>
      choice(
        $.strong,
        $.emphasis,
        $.code_span,
        $.math_span,
        $.reference,
        $.escape_sequence,
        $._word,
        $._delimiter_char,
      ),

    // ===== Strong and Emphasis =====
    // The first element after the open marker may be a word_alnum (traditional
    // content) or another inline element (enables directly-nested formatting
    // such as *_foo_* and _*foo*_). repeat1 enforces non-empty content.
    strong: ($) =>
      seq(
        $._strong_open,
        repeat1($._inline_no_star),
        $._strong_close,
      ),

    emphasis: ($) =>
      seq(
        $._emphasis_open,
        repeat1($._inline_no_underscore),
        $._emphasis_close,
      ),

    _inline_no_star: ($) =>
      choice(
        $.emphasis,
        $.code_span,
        $.math_span,
        $.reference,
        $.escape_sequence,
        $._word,
        $._delimiter_char,
      ),

    _inline_no_underscore: ($) =>
      choice(
        $.strong,
        $.code_span,
        $.math_span,
        $.reference,
        $.escape_sequence,
        $._word,
        $._delimiter_char,
      ),

    code_span: (_$) => /`[^`\n]+`/,
    math_span: (_$) => /#[^#\n]+#/,

    // Reference types — lexically distinguished by prefix/content.
    // Mirrors the classification in lex-core/src/lex/inlines/references.rs.
    // Order matters: token.immediate() alternatives are tried by specificity.
    reference: ($) =>
      choice(
        $.citation_reference,
        $.annotation_reference,
        $.url_reference,
        $.file_reference,
        $.session_reference,
        $.tocome_reference,
        $.number_reference,
        $.general_reference,
      ),

    // [@key] or [@key, p.42] — citation
    tocome_reference: (_$) =>
      token(
        choice(
          seq("[", choice("TK", "tk", "Tk", "tK"), "]"),
          seq(
            "[",
            choice("TK-", "tk-", "Tk-", "tK-"),
            /[a-z0-9]+/,
            "]",
          ),
        ),
      ),

    // [42] — numbered footnote (digits only)
    number_reference: (_$) => token(seq("[", /[0-9]+/, "]")),

    // [anything else] — general reference (fallback)
    blank_line: ($) => $._newline,
  },
});
