test/corpus/tables.txt
==================
Simple table
==================
Results:
    | A | B |
    | 1 | 2 |
---

(document
  (definition
    subject: (subject_content)
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter))
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter))))

==================
Table with parameters
==================
Data:
    | Name  | Value |
    | Alpha | 100   |

    :: table align=lcr header=1 ::
---

(document
  (definition
    subject: (subject_content)
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter))
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter))
    (blank_line)
    (annotation_single
      (annotation_marker)
      (annotation_header)
      (annotation_close))))

==================
Table with inline formatting in cells
==================
Stats:
    | *Name* | `Code` |
    | _test_ | #42#   |
---

(document
  (definition
    subject: (subject_content)
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content
          (strong)))
      (pipe_delimiter)
      (table_cell
        (text_content
          (code_span)))
      (pipe_delimiter))
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content
          (emphasis)))
      (pipe_delimiter)
      (table_cell
        (text_content
          (math_span)))
      (pipe_delimiter))))

==================
Table nested in definition
==================
Summary:
    Results:
        | A | B |
        | 1 | 2 |
---

(document
  (definition
    subject: (subject_content)
    (definition
      subject: (subject_content)
      (table_row
        (pipe_delimiter)
        (table_cell
          (text_content))
        (pipe_delimiter)
        (table_cell
          (text_content))
        (pipe_delimiter))
      (table_row
        (pipe_delimiter)
        (table_cell
          (text_content))
        (pipe_delimiter)
        (table_cell
          (text_content))
        (pipe_delimiter)))))

==================
Table with separator line
==================
Data:
    | Name  | Score |
    |-------|-------|
    | Alice | 95    |
---

(document
  (definition
    subject: (subject_content)
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter))
    (table_separator_row)
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter))))

==================
Table with merge markers
==================
Matrix:
    | Q1 | >> | Q2 | >> |
    | A  | B  | C  | D  |

    :: table header=2 ::
---

(document
  (definition
    subject: (subject_content)
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter))
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter))
    (blank_line)
    (annotation_single
      (annotation_marker)
      (annotation_header)
      (annotation_close))))

==================
Table with empty cells
==================
Sparse:
    | A |   | C |
    |   | B |   |
---

(document
  (definition
    subject: (subject_content)
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter))
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter))))

==================
Table with multi-line mode (blank line between rows)
==================
Log:
    | Trial   | Result  |

    | Trial 1 | Success |
---

(document
  (definition
    subject: (subject_content)
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter))
    (blank_line)
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter))))

==================
Table with references in cells
==================
Refs:
    | Source | Note |
    | [1]   | [TK] |
---

(document
  (definition
    subject: (subject_content)
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter)
      (table_cell
        (text_content))
      (pipe_delimiter))
    (table_row
      (pipe_delimiter)
      (table_cell
        (text_content
          (reference
            (number_reference))))
      (pipe_delimiter)
      (table_cell
        (text_content
          (reference
            (tocome_reference))))
      (pipe_delimiter))))

==================
Table followed by other elements (table is not terminal)
==================
1. Results

    Summary:
        | Name  | Score |
        | Alice | 95    |

    This paragraph follows the table.

    - And a list item too
---

(document
  (session
    title: (line_content
      (list_marker)
      (text_content))
    (definition
      subject: (subject_content)
      (table_row
        (pipe_delimiter)
        (table_cell
          (text_content))
        (pipe_delimiter)
        (table_cell
          (text_content))
        (pipe_delimiter))
      (table_row
        (pipe_delimiter)
        (table_cell
          (text_content))
        (pipe_delimiter)
        (table_cell
          (text_content))
        (pipe_delimiter))
      (blank_line))
    (paragraph
      (text_line
        (line_content
          (text_content))))
    (blank_line)
    (paragraph
      (dialog_line
        (list_marker)
        (text_content)))))
