test/corpus/verbatim.txt
==================
Simple verbatim block
==================
Code:
    function hello() {}
:: javascript ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (paragraph
      (text_line
        (line_content
          (text_content))))
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Verbatim with multiple content lines
==================
Code:
    line one
    line two
    line three
:: python ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (paragraph
      (text_line
        (line_content
          (text_content)))
      (text_line
        (line_content
          (text_content)))
      (text_line
        (line_content
          (text_content))))
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Verbatim without content
==================
Photo:
:: image src=sunset.jpg ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Verbatim with blank line after subject
==================
Code:

    function hello() {}
:: javascript ::
---

(document
  (session
    title: (line_content
      (subject_content))
    (paragraph
      (text_line
        (line_content
          (text_content)))))
  (annotation_single
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Verbatim with parameters
==================
API Response:
    {"status": "ok"}
:: json format=pretty ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (paragraph
      (text_line
        (line_content
          (text_content))))
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Fullwidth verbatim block
==================
Table:
 Header | Value
 Data   | More
:: table ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (verbatim_content)
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Fullwidth with blank line after subject
==================
Table:

 Header | Value
 Data   | More
:: table ::
---

(document
  (session
    title: (line_content
      (subject_content))
    (paragraph
      (text_line
        (line_content
          (text_content)))
      (text_line
        (line_content
          (text_content)))))
  (annotation_single
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Fullwidth with mixed indent content
==================
Wide Table:
 Alpha  | 10    | baseline
Beta   | 25    | extended
 Gamma  | 30    | final
:: data ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (verbatim_content)
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Fullwidth without content
==================
Empty:
:: label ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Verbatim group with two pairs
==================
Install:
    $ brew install lex
Run:
    $ lex help
:: shell ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (paragraph
      (text_line
        (line_content
          (text_content))))
    (verbatim_group_item
      subject: (subject_content)
      (paragraph
        (text_line
          (line_content
            (text_content)))))
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Verbatim group with three pairs
==================
Step one:
    $ ls
Step two:
    $ pwd
Step three:
    $ whoami
:: shell ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (paragraph
      (text_line
        (line_content
          (text_content))))
    (verbatim_group_item
      subject: (subject_content)
      (paragraph
        (text_line
          (line_content
            (text_content)))))
    (verbatim_group_item
      subject: (subject_content)
      (paragraph
        (text_line
          (line_content
            (text_content)))))
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Verbatim group with blank lines between pairs
==================
First:
    content1

Second:

    content2
:: python ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (paragraph
      (text_line
        (line_content
          (text_content))))
    (blank_line)
    (verbatim_group_item
      subject: (subject_content)
      (paragraph
        (text_line
          (line_content
            (text_content)))))
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Verbatim group with no content
==================
Label A:
Label B:
:: tag ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (verbatim_group_item
      subject: (subject_content))
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Verbatim group mixed content and no content
==================
Has content:
    $ echo hello
No content:
Also has content:
    $ echo world
:: shell ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (paragraph
      (text_line
        (line_content
          (text_content))))
    (verbatim_group_item
      subject: (subject_content))
    (verbatim_group_item
      subject: (subject_content)
      (paragraph
        (text_line
          (line_content
            (text_content)))))
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Subject with trailing whitespace
==================
Code: 
    print("hello")
:: python ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (paragraph
      (text_line
        (line_content
          (text_content))))
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Verbatim group with trailing whitespace on subjects
==================
Step one: 
	$ ls
Step two: 
	$ pwd
:: shell ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (paragraph
      (text_line
        (line_content
          (text_content))))
    (verbatim_group_item
      subject: (subject_content)
      (paragraph
        (text_line
          (line_content
            (text_content)))))
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Fullwidth with many content lines
==================
Table:
 Header | Value | Notes
 -------+-------+------
 Alpha  | 10    | first
Beta   | 25    | second
 Gamma  | 30    | third
:: data ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (verbatim_content)
    (annotation_marker)
    (annotation_header)
    (annotation_close)))
